# Tic_Tac_Toe.

./: CMakeLists.txt
include/: BoardGame_Classes.hpp
src/: AI_Player_four.cpp  Player.cpp  Pyramic_X_O.cpp  RandomPlayer_four.cpp  X_O_App.cpp  four_in_a_row.cpp
